// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build-time theming of main theme with matching baseThemeId generates the correct css files 1`] = `
":root {
  --font-family-base-ua1f64:\\"Amazon Ember\\", \\"Helvetica Neue\\", Roboto, Arial, sans-serif;
  --color-background-button-primary-default-q0onzs:#aaaaaa;
  --color-background-button-primary-active-h11zge:#dd6b10;
  --space-scaled-xs-6859qs:8px;
}

.compact-mode:not(#\\\\9) {
  --space-scaled-xs-6859qs:4px;
}

.dark-mode:not(#\\\\9) {
  --color-background-button-primary-default-q0onzs:#bbbbbb;
  --color-background-button-primary-active-h11zge:#ec7211;
}

.secondary:not(#\\\\9) {
  --color-background-button-primary-default-q0onzs:#ec72aa;
  --color-background-button-primary-active-h11zge:#dd6baa;
}

.dark-mode.secondary:not(#\\\\9) {
  --color-background-button-primary-default-q0onzs:#dd6baa;
  --color-background-button-primary-active-h11zge:#ec72aa;
}"
`;

exports[`Build-time theming of secondary theme generates the correct css files 1`] = `
":root {
  --font-family-base-ua1f64:\\"Amazon Ember\\", \\"Helvetica Neue\\", Roboto, Arial, sans-serif;
  --color-background-button-primary-default-qvzkqw:#ec7211;
  --color-background-button-primary-active-h11zge:#dd6b10;
  --space-scaled-xs-6859qs:8px;
}

.compact-mode:not(#\\\\9) {
  --space-scaled-xs-6859qs:4px;
}

.dark-mode:not(#\\\\9) {
  --color-background-button-primary-active-h11zge:#ec7211;
}

.secondary:not(#\\\\9) {
  --color-background-button-primary-default-qvzkqw:#aaaaaa;
  --color-background-button-primary-active-h11zge:#dd6baa;
}

.dark-mode.secondary:not(#\\\\9) {
  --color-background-button-primary-default-qvzkqw:#bbbbbb;
  --color-background-button-primary-active-h11zge:#ec72aa;
}"
`;
